--- a/teacher.html
+++ b/teacher.html
@@ -14,13 +14,11 @@
       <li class="teacher_stuinfo">录入学生成绩信息</li>
       <li class="teacher_grade">成绩统计</li>
       <li class="teacher_tea">个人信息</li>
-      <li class="teacher_testall">所有可预约项目</li>
+      <li class="teacher_testall">所有可修改项目</li>
       <li class="teacher_class">实验室信息</li>
     </ul>
   </div>
-  <div id="info_teacher">
-    
-  </div>
+  <div id="info_teacher"></div>
   </div>
 
   <img id="teacher_photo" src="build/img/teacher.jpg">
