--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
       <li class="admin_admin">管理员</li>
       <li class="admin_public">公告栏</li>
       <li class="admin_person">个人信息</li>
-      <li class="admin_testorder">等待审批的项目</li>
+      <li class="admin_testorder">待通过确认项目</li>
     </ul>
   </div>
   <div id="info_admin"></div>
