--- a/student.html
+++ b/student.html
@@ -10,8 +10,8 @@
   <div id="item">
     <div>目录</div>
     <ul>
-      <li class="stuent_order">确认实验</li>
-      <li class="stuent_test">实验列表</li>
+      <li class="stuent_order">待确认实验</li>
+      <li class="stuent_test">已确认实验列表</li>
       <li class="stuent_infor">个人信息</li>
       <li class="stuent_public">查看公告</li>
       <li class="stuent_class">实验室信息</li>
