--- a/teacher.html
+++ b/teacher.html
@@ -10,11 +10,11 @@
   <div id="item">
     <div>目录</div>
     <ul>
-      <li class="teacher_test">项目管理</li>
+      <li class="teacher_test">实验室课程安排</li>
       <li class="teacher_stuinfo">录入学生成绩信息</li>
       <li class="teacher_grade">成绩统计</li>
       <li class="teacher_tea">个人信息</li>
-      <li class="teacher_testall">所有可修改项目</li>
+      <li class="teacher_testall">可调整实验室</li>
       <li class="teacher_class">实验室信息</li>
     </ul>
   </div>
